--- a/app/src/main/res/layout/ghrpop_acceuil.xml
+++ b/app/src/main/res/layout/ghrpop_acceuil.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="16dp"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/popup_background"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:padding="16dp">
 
+    <!-- Checklist placée à gauche -->
     <ListView
         android:id="@+id/checklist_view"
         android:fontFamily="@font/nunito_extrabold"
@@ -16,4 +17,9 @@
         android:choiceMode="multipleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="8dp" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 </LinearLayout>
