--- a/app/src/main/res/layout/activity_suitedecouche.xml
+++ b/app/src/main/res/layout/activity_suitedecouche.xml
@@ -92,7 +92,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="sans-serif-black"
-        android:text="service Suite de couches"
+        android:text="Service suite de couches"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
